# backend_cookiecutter

./: .pre-commit-config.yaml  Dockerfile  README.md  cookiecutter.json  docker-compose.yml  pyproject.toml
